tests/marouter/errors/false_options/false_net/options.marouter
-n xxx/input_taz.taz.xml -a input_od_o.fma -o routes.rou.xml
